# my_project_template

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  makefile
lib/JWrite/: JWrite.c  JWrite.h
lib/aes/: aes.h
lib/table/: README.md  functionprototypes.h  functions.c  table.h  tablehandler.h
lib/taskhandler/: ata_message.c  ata_message.h  taskhandler.md  trk_message.c  trk_message.h  trk_messageDefinitions.h  trk_messageFunctions.c  trk_messageFunctions.h
src/: main.c  main.cpp
src/Amazon Test Questions/: FindMaxQuali.c  FindMinimalHeaviestSet.c  Leadership Principle Worksheet and Exercise - Candidate Prep.xlsx  RequestParser.c  groupbookers.c
src/BitManipulator/: bitManipulator.cpp  bitManipulator.h  task.txt
src/CircularBuffer/: Task.txt  circ_buff.cpp  circ_buff.h
src/TrafficLight/: task.txt  trafficLight.cpp  trafficLight.h
src/externcdeneme/: externc.c  externc.h
tests/: CMakeLists.txt  test.c
tests/unit/: test_bit_manipulator.cpp  test_circ_buff.cpp  test_traffic_light.cpp
